[GSM is Greg Sabino Mullane <greg@endpoint.com> <greg@turnstep.com> ]

Bucardo version 4.2.0, released September 29, 2009

  - Add the "delta_bypass" feature, which allows a pushdelta sync to switch 
    to 'fullcopy' mode on the fly, depending on the number of rows that 
    have changed. [GSM]

  - Have 'bucardo_ctl install' check for successful plperlu installaion [GSM]

  - Clean up and standardize all the bucardo_ctl list/add/remove actions. [GSM]

Bucardo version 4.1.2, released September 25, 2009

 - Fix sequence replication by setting is_called properly on the targets
   [GSM, thanks to Selena Deckelmann for discovering this]

 - Respect server_side_prepares db setting in validate_sync. Previously, 
   this function would fail if validating more than one table at a time 
   and the database was set as server_side_prepares off [GSM]

 - Make sure we cast rowid* to text within the bucardo_add_delta-called 
   functions, for picky versions of Postgres. [GSM]

Bucardo version 4.1.1, released September 24, 2009

 - Fix case where Bucardo was too eager to lock tables post serialization 
   failures. Since we can't really do this automatically and safely, 
   remove the code in question for now. [GSM, hat tip to Selena Deckelmann]

Bucardo version 4.1.0, released September 24, 2009

  - Fix problem with possible function name collision when the names 
    of the combined columns in the primary key is greater than NAMEDATALEN, 
    which we'll assume is 63. [GSM]

  - Add "bucardo_ctl inspect table" to show all dependencies, as well 
    as cross referencing against herds the table is in [GSM]

  - Fix an error when validate_sync tries to recreate an existing trigger; 
    occurred when a fullcopy sync was set to ping=true [GSM]

  - When using "bucardo_ctl add all tables db=<name>", make sure we only 
    look for the already added tables for that specific database.
    [Selena Deckelmann and Josh Tolley]
